helmCharts/traefik/traefik-dashboard-config.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: traefik-system
spec:
  basicAuth:
    secret: traefik-dashboard-auth-secret
