helmCharts/traefik/traefik-dashboard-ingressroute.yaml
---
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.mycavanaughnetwork.com`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
      services:
        - name: api@internal
          kind: TraefikService
  # Use the secret generated by cert-manager
  tls:
    secretName: traefik-mycavanaughnetwork-cert-staging
